# ChangeLog for gnome-extra/zenity
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/zenity/ChangeLog,v 1.220 2014/04/27 07:23:21 pacho Exp $

  27 Apr 2014; Pacho Ramos <pacho@gentoo.org> -zenity-3.8.0.ebuild:
  drop old

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> zenity-3.8.0-r2.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> zenity-3.8.0-r2.ebuild:
  amd64 stable, bug 499954

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> zenity-3.8.0-r2.ebuild:
  Fix wrong commit, bug 502160

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> zenity-3.8.0-r2.ebuild:
  arch stable, bug 888

*zenity-3.8.0-r2 (19 Feb 2014)

  19 Feb 2014; Pacho Ramos <pacho@gentoo.org>
  +files/zenity-3.8.0-broken-autoclose.patch,
  +files/zenity-3.8.0-listbox-expand.patch, +zenity-3.8.0-r2.ebuild,
  -zenity-3.8.0-r1.ebuild:
  Apply some upstream bugfixes that also fix bug #501722 reported by Jazek. Drop
  old.

*zenity-3.8.0-r1 (24 Dec 2013)

  24 Dec 2013; Pacho Ramos <pacho@gentoo.org>
  +files/zenity-3.8.0-double-click.patch, +zenity-3.8.0-r1.ebuild,
  -zenity-3.6.0.ebuild:
  Fix double clicking an item or hitting enter after selecting an item (#493332
  by Kai Wustermann), drop old.

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> zenity-3.8.0.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> zenity-3.8.0.ebuild:
  amd64 stable, bug #478252

  29 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> -zenity-3.4.0.ebuild,
  -files/zenity-3.4.0-list-check.patch,
  -files/zenity-3.4.0-list-default-column.patch,
  -files/zenity-3.4.0-list-segfault.patch, zenity-3.8.0.ebuild:
  Clean up old revision.

*zenity-3.8.0 (28 Mar 2013)

  28 Mar 2013; Pacho Ramos <pacho@gentoo.org> +zenity-3.8.0.ebuild:
  Version bump for Gnome 3.8

*zenity-3.6.0 (24 Dec 2012)

  24 Dec 2012; Gilles Dartiguelongue <eva@gentoo.org> -zenity-3.2.0.ebuild,
  +zenity-3.6.0.ebuild: