@@ -6,15 +6,17 @@ AUX zenity-3.8.0-broken-autoclose.patch 3463 SHA256 1925f3c814b5eefc187e33b10f0c
 AUX zenity-3.8.0-double-click.patch 1008 SHA256 a020d4360f1ca64057b542776a94dcb3f4ce5760cd32b7a772a9530ad3c516e3 SHA512 f7f8ec8e4ad797a454f18610920f87c1ead639bd58f63b1c594862a583c72233cf769a3ef6226ad228f8e45b7e61e3f2de5ad4b70eef45f7fd2472a6d0153e86 WHIRLPOOL 3dd3bf0904b05467bc20ce9ba24a478b55803b5cd3cd486d701e25f2b577690c888504ef9d9ce93dc3c2b1a63808c79a7bb4b7b9a4c6cb978c6a2467e393e4a0
 AUX zenity-3.8.0-listbox-expand.patch 753 SHA256 80bf3608a7ebb68edd0e4a72bb57836d4b638efa5ac88cc6fb536a873e2916be SHA512 e53c1286690f6886f6b87d5d77891f371b8751f09c889445c6dde7a4288f1c189d5a19183421678cd610f8b1953c994432e91bf22534043e05d654074542bef5 WHIRLPOOL cf232010e002b09e6eddec1fb4c8ac3062ed1a5b73461940de3221f4b94d487c008cab94050da60967562b1721e197dd730b007fcf4f04ba3cfb057010eea0cd
 DIST zenity-2.32.1.tar.bz2 3128666 SHA256 8838be041a07364b62a4281c971392e4a09bb01bb3237a836ec0457ec0ea18ac SHA512 5cab5be6e22da46b6fa78bddd3c40e2413df64f8267452a332efc093e0e865c621cd68897c11c1af9a33afceb8cf84e08b03e17d4d0b3abfed95cbafe199c94e WHIRLPOOL eb3db6f89f5eaa9b316a22d46a4af03991255c16d28b10f7fe56f553f913642b3fe30661d2714bbb3921c9f5e1adede56b6b225313fe26211bdf6030a6167858
+DIST zenity-3.12.1.tar.xz 3670368 SHA256 a59705cdd1ea5318fdae3075c1cedcbead479230e9bead204391566d973dae11 SHA512 5bcb4db484e6747d6e8980bcb59efdf6d1fb86f476a84f6080cf473ff943d9a9d8ee3e2af9ccf7b6da44928be88bdae5dedc0f90189075d834654949e80cf08b WHIRLPOOL 4ea233c3ab537dcd2b9d3c55a9780e9a484aebbb003a1bed33a0a8a543d1d7faf4a37cd98b05cb7c2844d41229107086670c54b994702cf33d304de1e7980abe
 DIST zenity-3.8.0.tar.xz 3651076 SHA256 94fbf0b71592f26dce0e2c49b82b4401139c8434084ad24c2c6a61ace1e6563f SHA512 3e7c72a19f3f48c9da1578abfbdd3cd5973dbea6ead9fdf035b34405be2da9ea1be6f8ace271948144a9a7b6e34cac1dfc3e554f19438431ffb1e82f08ddc02d WHIRLPOOL cc5a731cce52bb4f2783d41b7f9319efe306552a3ada48fa91b4ead15407f3ad079b618c8ff508ca4666922de4bcc81b5824d77497615e03ddd61412bbb2fa90
 EBUILD zenity-2.32.1.ebuild 1296 SHA256 d25166a27416913c1dca7e5544ffc2e328cd2303616738fb05616c2c51bf2e27 SHA512 acaa93899a5e92e943609976a78ea8a648d7d75614e9f99760bd9c022259d4c99b9b77a58ebdabada364e822a6924882daefadd4e786df2f9d9cf9ea20baa85e WHIRLPOOL 62ab0b84f6a3d57a473bb4d170b7b39da0443c4b20b1627336184983625c124f081cf9a2a770018d1c4f76da80825e2e90648e5c8626b0f10220457f37f28829
+EBUILD zenity-3.12.1.ebuild 1265 SHA256 75ce75603058b907f5211d82548d5f462139e7bbc75e56f76273289867ec33b1 SHA512 7a9c0199e1c073d54cf563b9be85a49ffe2e1f0cb3f18ef6b5e56b4f8fd8d9bc61f58db3bd82fdb3dc1bd78e98f3185e70f20db9967b8292b45e635fb8bba0f5 WHIRLPOOL 3973ee07ad9e3a0d8d9d4ae2a1ec002c93ab802a6d4ac49a777f31adfd39ac3fc9ac437e1a81f8293ae2e11de20a4d614e67cd71be0174978e9bed925fd98fa1
 EBUILD zenity-3.8.0-r2.ebuild 1707 SHA256 ad61e1c230b296526819681bb75543f536b911b07b5bd5fef155a2b097b6fd1c SHA512 5d327877e15e4c4214f27a0e1ce2fa49c77149dd67311637650fa135e428021404e5e65418ecf8c9f79f0f6f5fa305db959d85c1ce44d87f477a5153410e96c9 WHIRLPOOL abedb1d89eec81eca3482d44ae28fc30e159802b34a225ea823583a7088c807e3370be4b2e8a604357e6e7f8986772a2cf2a4e44eddd98d6fac76231e1127ed5
-MISC ChangeLog 26236 SHA256 879386a1957c5a6d907cd002b81343b815298e1cc9a705f39e36daaba25c3857 SHA512 9d2279798f12fcce4a32c7862eb2c01ce841bf42867db033aa05af377626bcfdd49635e16cfbeb53dfde29f3d5c1c4e88d187fa473a1ea59b45d34241a4373b4 WHIRLPOOL fbc2d5bcaf6d1f39eb0d7ebab2316644d44210eb383246de666fc8ec797ff17ca05e44bcc7062662336d9697f273405b3c365518320716015906af558d685bf0
+MISC ChangeLog 26351 SHA256 25e9160d03f3c4910faad8ed90937502fef5a9ce7e47b8b316780cff70000ab5 SHA512 f40f734f757fbc13d5765174f3a03713c1d65d41e9de7fef812099de4901dbb82ed35f8b549c03d3215ef6ba5af4eced43ddd78f1ef78d9b384eb38f88265f0f WHIRLPOOL ff0a1d03fa65aab0ccd3d23b0da99d00078b24ddcfae916bc52be130bd1a82cafbf73b16bff72b175a57da5347224a540c3a5efe8caba94ce79ac03860471b7f
 MISC metadata.xml 302 SHA256 b52e3b6c6080efd1fedb03fe6136d89d74f1e58896ae8d6f075622bf6806e200 SHA512 d66d8a12c3ef2bc74a768e83d63f87c9da48e1773fbfbff60abbe5e01142daf1fd1fc500ad7ea51418e7574fa956e1c0eddebce5d59525bc725b8576f8da95c8 WHIRLPOOL 1721abff208b87e089940e5c87c0b0848adec4a5cb299e35777cd473370ee5f1cd6bdc3614e272fd084cc9b4922048f7a01d46a2ab64757e3b93ff9ea721e7a6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlNcsGoACgkQCaWpQKGI+9RWBQCfbuiNEuf8xN13YQ5JfAnG8/ly
-heMAnj/pZ+lbPR6dHhJJ9Yt4u2Octyb/
-=Gmvp
+iEYEAREIAAYFAlPFCdMACgkQCaWpQKGI+9SKTwCfSQLq3OToCrF89FNSvz6RyOUF
+OKcAn2awwyDi5ftZUT7PlhYG6EIyJIkD
+=DDLn
 -----END PGP SIGNATURE-----
