@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/zenity
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/zenity/ChangeLog,v 1.220 2014/04/27 07:23:21 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/zenity/ChangeLog,v 1.221 2014/07/15 11:00:34 pacho Exp $
+
+*zenity-3.12.1 (15 Jul 2014)
+
+  15 Jul 2014; Pacho Ramos <pacho@gentoo.org> +zenity-3.12.1.ebuild:
+  Version bump
 
   27 Apr 2014; Pacho Ramos <pacho@gentoo.org> -zenity-3.8.0.ebuild:
   drop old
